--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -1,83 +1,103 @@
-name: backend-continuous-deployment
+name: Backend Continuous Deployment
 
-on: 
-  workflow_dispatch:
+on:
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - 'starter/frontend/**'
+  workflow_dispatch:  # Allow manual triggering
   pull_request:
+    types: [closed]
     branches:
       - main
 
-env:
-  PYTHON_VERSION: 3.12.1
-  IMAGE_REPO_NAME: backend
-  IMAGE_TAG: latest
-
 jobs:
-  lint-test:
-    name: Run lint and test backend
+  Linting:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    defaults:
-      run: 
-        working-directory: ./starter/backend
+    environment: Devlopment Environment
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Setup python environment
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{env.PYTHON_VERSION}}
-      
-      - name: Install pipenv
-        run: |
-          pip install pipenv
-          pip install flake8
-      
-      - name: Install dependencies
-        run: |
-          pipenv install
-      
-      - name: Run lint
-        run: |
-          pipenv run lint
+    - name: Check the Repository
+      uses: actions/checkout@v3
 
-      - name: Run test
-        run: |
-          pipenv run test
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: " 3.12.1"
 
-  deploy:
-    name: Build and push docker image to ECR
+    - name: Install Rependencies
+      working-directory: starter/backend 
+      run:  |
+        python -m pip install --upgrade pip
+        pip install pipenv
+        pip install flake8
+
+    - name: Checkout Run Lint
+      run: cd starter/backend && pipenv run lint
+
+  Test:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    needs: [lint-test]
-    defaults:
-      run: 
-        working-directory: ./starter/backend
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Check the Repository
+      uses: actions/checkout@v3
 
-      - name: Configure AWS credential
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          aws-region: ${{vars.AWS_DEFAULT_REGION}}
+    - name: Use Python 3
+      uses:  actions/setup-python@v4
+      with:
+        python-version: " 3.12.1"
 
-      - name: Login AWS ECR
-        uses: aws-actions/amazon-ecr-login@v2
-        with: 
-          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          aws-region: ${{vars.AWS_DEFAULT_REGION}}
+    - name: Install Dependencies
+      working-directory: starter/backend 
+      run:  |
+        python -m pip install --upgrade pip
+        pip install pipenv
+        pip install flake8
+
+    - name: Test
+      run: cd starter/backend && pipenv install pytest && pipenv run test
+
       
-      - name: Build, tag and push docker image to AWS ECR
-        run: |
-          docker build -t ${{env.IMAGE_REPO_NAME}} .
-          docker tag ${{env.IMAGE_REPO_NAME}}:${{env.IMAGE_TAG}} ${{vars.AWS_ACCOUNT_ID}}.dkr.ecr.${{vars.AWS_DEFAULT_REGION}}.amazonaws.com/${{env.IMAGE_REPO_NAME}}:${{env.IMAGE_TAG}}
-          docker push ${{vars.AWS_ACCOUNT_ID}}.dkr.ecr.${{vars.AWS_DEFAULT_REGION}}.amazonaws.com/${{env.IMAGE_REPO_NAME}}:${{env.IMAGE_TAG}}
-      
-      - name: Update kubeconfig, deploy to EKS
-        run: |
-          aws eks update-kubeconfig --name cluster --region ${{vars.AWS_DEFAULT_REGION}}
-          cd k8s
-          kustomize edit set image backend=${{vars.AWS_ACCOUNT_ID}}.dkr.ecr.${{vars.AWS_DEFAULT_REGION}}.amazonaws.com/${{env.IMAGE_REPO_NAME}}:${{env.IMAGE_TAG}}
-          kustomize build | kubectl apply -f -
+  Build:
+    needs: [Linting, Test]
+    runs-on: ubuntu-latest
+    environment: Devlopment Environment
+    steps:
+    - name: Check the Repository
+      uses: actions/checkout@v3
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+        
+    - name: Login to Amazon
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v2
+
+    - name: Build and Push Docker Image
+      working-directory: starter/backend
+      env:
+        IMAGE_TAG: latest
+        REPO_NAME: backend
+      run: |
+        docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag 627483498834.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG .
+        docker push 627483498834.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
+    - name: Update Kubeconfig
+      run:
+       aws eks update-kubeconfig --name cluster --region us-east-1
+
+    - name: Deploy Docker Image to Amazon EKS
+      working-directory: starter/backend/k8s
+      env:
+        IMAGE_TAG: latest
+        REPO_NAME: backend
+      run: |
+        aws eks update-kubeconfig --name cluster --region us-east-1
+        kustomize edit set image backend=627483498834.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
+        kustomize build | kubectl apply -f -
