--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,83 +1,72 @@
-name: backend-continuous-integration
+name: Backend Continuous Integration
 
 on:
-  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - 'starter/frontend/**'
+  workflow_dispatch:  # Allow manual triggering
   pull_request:
     branches:
       - main
 
-env:
-  PYTHON_VERSION: 3.12.1
-  IMAGE_REPO_NAME: backend
-
 jobs:
-  lint:
-    name: Run lint backend
+  Linting:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./starter/backend
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Setup python environment
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{env.PYTHON_VERSION}}
-      
-      - name: Install pipenv
-        run: |
-          pip install pipenv
-          pip install flake8
-      
-      - name: Install dependencies
-        run: |
-          pipenv install
-      
-      - name: Run lint
-        run: |
-          pipenv run lint
-  
-  test: 
-    name: Run test backend
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./starter/backend
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Setup python environment
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{env.PYTHON_VERSION}}
-      
-      - name: Install pipenv
-        run: |
-          pip install pipenv
-          pip install flake8
-      
-      - name: Install dependencies
-        run: |
-          pipenv install 
-      
-      - name: Run test
-        run: | 
-          pipenv run test
+    environment: Devlopment Environment
 
-  build: 
-    name: Build backend
-    runs-on: ubuntu-latest
-    needs: [lint, test]
-    defaults:
-      run:
-        working-directory: ./starter/backend
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Check the Repository
+      uses: actions/checkout@v3
 
-      - name: Build docker image
-        run: |
-          docker build -t ${{env.IMAGE_REPO_NAME}} .
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: " 3.12.1"
+
+    - name: Install Dependencies
+      working-directory: starter/backend 
+      run:  |
+        python -m pip install --upgrade pip
+        pip install pipenv
+        pip install flake8
+
+    - name: Checkout Run Lint
+      run: cd starter/backend && pipenv run lint
+
+  Test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Check the Repository
+      uses: actions/checkout@v3
+
+    - name: Use Python 3
+      uses:  actions/setup-python@v4
+      with:
+        python-version: " 3.12.1"
+
+    - name: Install Dependencies
+      working-directory: starter/backend 
+      run:  |
+        python -m pip install --upgrade pip
+        pip install pipenv
+        pip install flake8
+
+    - name: Test
+      run: cd starter/backend && pipenv install pytest && pipenv run test
+
+      
+  Build:
+    needs: [Linting, Test]
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Check the Repository
+      uses: actions/checkout@v3
+
+    - name: Build Docker Image
+      run: |
+        cd starter/backend
+        docker build --tag mp-backend:latest .
