--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -1,91 +1,114 @@
-name: frontend-continuous-deployment
+name: Frontend Continuous Deployment
 
 on:
-  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - 'starter/frontend/**'
+  workflow_dispatch:  # Allow manual triggering
   pull_request:
-    branches: 
+    types: [closed]
+    branches:
       - main
 
-env: 
-  NODE_VERSION: 18.18.0
-  IMAGE_REPO_NAME: frontend
-  IMAGE_TAG: latest
-
 jobs:
-  lint-test:
-    name: Run lint and test frontend
+  Linting:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    defaults:
-      run: 
-        working-directory: ./starter/frontend
+    environment: Devlopment Environment
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Check the Repository
+      uses: actions/checkout@v3
 
-      - name: Setup Nodejs environment
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{env.NODE_VERSION}}
+    - name: Use Node.js 18
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+        cache: 'npm'
+        cache-dependency-path: starter/frontend/package-lock.json
 
-      - name: Cache dependencies
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      
-      - name: Install dependencies
-        run: |
-          npm install
-          npm install prettier@2.8.8 --save-dev
+    - name: Install Dependencies
+      working-directory: starter/frontend
+      run: npm ci
+
+    - name: Checkout Run Lint
+      run: cd starter/frontend && npm run lint
+
+  Test:
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Check the Repository
+      uses: actions/checkout@v3
+
+    - name: Use Node.js 18
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+        cache: 'npm'
+        cache-dependency-path: starter/frontend/package-lock.json
         
-      - name: Run lint
-        run: |
-          npm run lint
-
-      - name: Run test
-        run: |
-          npm run test
+    - name: Install Dependencies
+      working-directory: starter/frontend
+      run: npm ci
   
-  deploy:
-    name: Build and push docker image to ECR
+    - name: Test
+      run: cd starter/frontend && npm run test
+
+
+
+  Build:
+    needs: [Linting, Test]
     runs-on: ubuntu-latest
-    needs: [lint-test]
-    defaults:
-      run:
-        working-directory: ./starter/frontend
+    environment: Devlopment Environment
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Configure AWS credential
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          aws-region: ${{vars.AWS_DEFAULT_REGION}}
+    - name: Check the Repository
+      uses: actions/checkout@v3
+    
+    - name: Use Node.js 18
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+        cache: 'npm'
+        cache-dependency-path: starter/frontend/package-lock.json
 
-      - name: Login AWS ECR
-        uses: aws-actions/amazon-ecr-login@v2
-        with: 
-          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          aws-region: ${{vars.AWS_DEFAULT_REGION}}
-      
-      - name: Build, tag and push docker image to AWS ECR
-        run: |
-          aws eks update-kubeconfig --name cluster
-          kubectl get svc
-          export EXTERNALIP=$(kubectl get svc backend -o=jsonpath='{.status.loadBalancer.ingress[0].hostname}{"\n"}{.status.loadBalancer.ingress[0].ip}')
-          echo "EXTERNALIP=$EXTERNALIP"
-          docker build --build-arg=REACT_APP_MOVIE_API_URL=http://$EXTERNALIP -t ${{env.IMAGE_REPO_NAME}} .
-          docker tag ${{env.IMAGE_REPO_NAME}}:${{env.IMAGE_TAG}} ${{vars.AWS_ACCOUNT_ID}}.dkr.ecr.${{vars.AWS_DEFAULT_REGION}}.amazonaws.com/${{env.IMAGE_REPO_NAME}}:${{env.IMAGE_TAG}}
-          docker push ${{vars.AWS_ACCOUNT_ID}}.dkr.ecr.${{vars.AWS_DEFAULT_REGION}}.amazonaws.com/${{env.IMAGE_REPO_NAME}}:${{env.IMAGE_TAG}}
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+  
 
-      - name: Update kubeconfig, deploy to EKS
-        run: |
-          aws eks update-kubeconfig --name cluster --region ${{vars.AWS_DEFAULT_REGION}}
-          cd k8s
-          kustomize edit set image frontend=${{vars.AWS_ACCOUNT_ID}}.dkr.ecr.${{vars.AWS_DEFAULT_REGION}}.amazonaws.com/${{env.IMAGE_REPO_NAME}}:${{env.IMAGE_TAG}}
-          kustomize build | kubectl delete -f -
+    - name: Login to Amazon 
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v2
+
+
+
+    - name: Build and Push Docker Image
+      working-directory: starter/frontend
+      env:
+        IMAGE_TAG: latest
+        REPO_NAME: frontend
+      run: |
+        docker build --build-arg=REACT_APP_MOVIE_API_URL=http://a040382e88a9e4af9a01e246f3a9b18e-90642243.us-east-1.elb.amazonaws.com --tag 627483498834.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG .
+        docker push 013138012705.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
+    
+
+    - name: Configure Kubeconfig
+      run:
+       aws eks update-kubeconfig --name cluster --region us-east-1
+
+
+    - name: Deploy Docker Image to Amazon EKS
+      working-directory: starter/frontend/k8s
+      env:
+        IMAGE_TAG: latest
+        REPO_NAME: frontend
+      run: |
+          kustomize edit set image frontend=627483498834.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
           kustomize build | kubectl apply -f -
