--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -1,89 +1,76 @@
-name: frontend-continuous-integration
+name: Frontend Continuous Integration
 
 on:
-  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - 'starter/frontend/**'
+  workflow_dispatch:  # Allow manual triggering
   pull_request:
     branches:
       - main
 
-env:
-  NODE_VERSION: v18.18.0
-  IMAGE_REPO_NAME: frontend
-
 jobs:
-  lint:
-    name: Run lint frontend
+  Linting:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./starter/frontend
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Setup Nodejs environment
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{env.NODE_VERSION}}
-      
-      - name: Cache dependencies
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      
-      - name: Install dependencies
-        run: |
-          npm install
-          npm install prettier@2.8.8 --save-dev
-        
-      - name: Run lint
-        run: |
-          npm run lint
-      
-  test:
-    name: Run test frontend
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./starter/frontend
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Setup Nodejs environment
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{env.NODE_VERSION}}
-      
-      - name: Cache dependencies
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      
-      - name: Install dependencies
-        run: |
-          npm install
-          npm install prettier@2.8.8 --save-dev
-      
-      - name: Run test
-        run: |
-          npm run test
-  
-  build:
-    name: Build docker image
-    needs: [lint, test]
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./starter/frontend
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    environment: Devlopment Environment
 
-      - name: Build docker image
-        run: |
-          docker build -t ${{env.IMAGE_REPO_NAME}} .
+    steps:
+    - name: Check the Repository
+      uses: actions/checkout@v3
+
+    - name: Use Node.js 18
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+        cache: 'npm'
+        cache-dependency-path: starter/frontend/package-lock.json
+
+    - name: Install Dependencies
+      working-directory: starter/frontend
+      run: npm ci
+
+    - name: Checkout Run Lint
+      run: cd starter/frontend && npm run lint
+
+  Test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Check the Repository
+      uses: actions/checkout@v3
+
+    - name: Use Node.js 18
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+        cache: 'npm'
+        cache-dependency-path: starter/frontend/package-lock.json
+    - name: Install Dependencies
+      working-directory: starter/frontend
+      run: npm ci
+  
+    - name: Test
+      run: cd starter/frontend && npm run test
+      
+  Build:
+    needs: [Linting, Test]
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Check the Repository
+      uses: actions/checkout@v3
+    
+    - name: Use Node.js 18
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+        cache: 'npm'
+        cache-dependency-path: starter/frontend/package-lock.json
+
+    - name: Build and Run Docker Image
+      run: |
+        cd starter/frontend
+        docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag=mp-frontend:latest .
+        docker run --name mp-frontend -p 3000:3000 -d mp-frontend
